// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Teams service endpoint returns an array of multiple teams renders the page 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/all-teams"
      target="_self"
    >
       Teams 
    </a>
  </div>
   
  <transition-stub
    class="my-3"
    css="true"
    enteractiveclass=""
    enterclass=""
    entertoclass="show"
    leaveactiveclass=""
    leaveclass="show"
    leavetoclass=""
    name=""
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="alert alert-dismissible alert-info"
      role="alert"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        ×
      </button>
      
    Click a team's name in the table below to view more information about that
    team
  
    </div>
  </transition-stub>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="team-name"
        >
          Name
        </th>
         
        <th>
          Description
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="team-name table-primary"
        >
          <a
            class="team-name"
            href="/teams/test-team-id-1"
          >
            Test Team Name 1
          </a>
        </td>
         
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td
          class="team-name table-primary"
        >
          <a
            class="team-name"
            href="/teams/test-team-id-2"
          >
            Test Team Name 2
          </a>
        </td>
         
        <td>
          <div>
            

            <p>
              Test Team Description 2
            </p>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Teams service endpoint returns an empty array renders the page 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/all-teams"
      target="_self"
    >
       Teams 
    </a>
  </div>
   
  <transition-stub
    class="my-3"
    css="true"
    enteractiveclass=""
    enterclass=""
    entertoclass="show"
    leaveactiveclass=""
    leaveclass="show"
    leavetoclass=""
    name=""
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="alert alert-dismissible alert-info"
      role="alert"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        ×
      </button>
      
    Click a team's name in the table below to view more information about that
    team
  
    </div>
  </transition-stub>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="team-name"
        >
          Name
        </th>
         
        <th>
          Description
        </th>
      </tr>
    </thead>
     
    <tbody />
  </table>
</div>
`;
